final commit add styling and add data fetching using Axios

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,3 +4,10 @@
   align-items: center;
   min-height: 100vh;
 }
+.listItem {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+.listItem:hover {
+  color:rgb(0, 0, 163)
+}
