--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,4 +3,13 @@
     height:80px;
     background-color: #000;
     color:#fff;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0 1em;
 }
