--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 html {
   font-size: 62.5%;
 }
@@ -6,4 +8,6 @@ body {
   min-height:100vh;
   margin:0;
   font-size: 1.6rem;
+  font-family: 'Roboto', sans-serif;
+
 }
